--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,9 +11,15 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-pack": "^0.1.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -42,6 +49,10 @@
     ]
   },
   "devDependencies": {
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.8",
+    "@types/redux-pack": "^0.1.5",
+    "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.9"
   }
 }
